--- a/Server_Web_Multithread/notfound.html
+++ b/Server_Web_Multithread/notfound.html
@@ -11,7 +11,7 @@ and open the template in the editor.
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-	<div>Try again!</div>
+	<div>404 Not Found</div>
 	<div>index.html</div>
 	<div>hacker.gif</div>
 	<div>network.jpeg</div>
